# POC_Google_Langextract

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: analyze.py
app/core/: config.py  schemas.py
app/services/: classifier.py  extractor.py  report_generator.py
app/templates/: extraction_templates.py
app/utils/: file_handler.py
frontend/: README.md  app.py
sample_docs/: Langextract_test_research_paper.txt  Langextract_test_story.txt  Langextract_test_transcript.txt
